assets/css/style.scss
/* ... */
//About Section
#about-section {
	display: flex;
	flex-direction: column;
	gap: 16px;
}

.about-section-content {
	display: flex;
	flex-direction: column;
	gap: 34px;
}

//Project Section
.projects-section {
	display: flex;
	flex-direction: column;
	gap: 16px;
}

.grid-container {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-column-gap: 34px;
	grid-row-gap: 34px;
}

.grid-container.equal {
	grid-auto-rows: 1fr
}

@media only screen and (max-width: 767px) {
	.grid-container {
		grid-template-columns: repeat(2, 1fr);
	}
}

@media only screen and (max-width: 500px) {
	.grid-container {
		grid-template-columns: repeat(1, 1fr);
	}
}

//Project Cards
.project-card {
	display: flex;
	flex-direction: column;
	gap: 34px;
}

.project-card>a {
	margin-top: auto;
}

.project-card-text-container {
	flex-direction: column;
	display: flex;
	gap: 16px
}

.project-card-text {
	overflow: hidden;
	text-overflow: ellipsis;
	display: -webkit-box;
	line-clamp: 4;
	-webkit-line-clamp: 4;
	-webkit-box-orient: vertical;
}

.project-title {
	overflow: hidden;
	text-overflow: ellipsis;
	display: -webkit-box;
	line-clamp: 1;
	-webkit-line-clamp: 1;
	-webkit-box-orient: vertical;
}

.project-image {
	height: 100%;
	width: auto;
	aspect-ratio: 1/1;
	border-radius: 51px;
	border: 1px solid var(--img-border);
}

.card-image {
	position: relative;
	height: 200px;
	margin: 0 auto;
}

//Download count-badge
.download-badge {
	position: absolute;
	display: inline-flex;
    align-items: end;
	right: -7px;
	top: 5px;
	line-height: 16px;
	transition: .15s ease transform;
	transform: scale(0);
	padding: 4px 7px;
	border-radius: 1em;
	-webkit-user-select: none;
	user-select: none;
	font-weight: bold;
	background: var(--red);
	border: 1px solid var(--red-dark);
	//harcoded cause it's the same for light/dark
	color: #fafafa;
}

.download-badge.load {
	transform: none;
}

.download-count {
	padding-left: 3px;
}

.download-count .old {
	transition: .15s ease transform;
}

.download-count .new {
	position: absolute;
	left: 0;
	top: 0;
	transform: translateY(100%);
	transition: .15s ease transform;
}

.download-count span[data-type=digit] {
	position: relative;
	display: inline-flex;
	overflow: hidden;
	transition: .1s ease width;
}

.download-count span[data-type=digit].replace .new {
	transform: translateY(0);
}

.download-count span[data-type=digit].replace .old {
	transform: translateY(-100%);
}

//Blog cards
.blog-card {
	display: flex;
	flex-direction: column;
	overflow: hidden;
	padding: 25px 20px;
	outline: 1px solid var(--img-border);
	text-decoration: none;
}

.blog-card p {
	margin: 0;
	font-size: 20px;
	font-weight: bold;
}

.blog-card span {
	font-size: 17px;
}

@media only screen and (max-width: 1023px) {
	.blog-card p {
		font-size: 18px;
	}
}

/****************************** Privacy Page Layout *****************************/
#privacy .heading {
	display: flex;
	align-items: center;
	padding: 0 25px;
}

#privacy .heading>img {
	height: 100px;
	width: auto;
	aspect-ratio: 1/1;
	border-radius: 26px;
	border: 1px solid var(--img-border);
}

#privacy .heading>span {
	padding-left: 20px;
	font-size: 30px;
	font-weight: bold;
}

#privacy .paper {
	font-family: Courier, monospace;
	padding: 20px 25px 0;
	border-radius: 1em;
}

#privacy .paper>.title {
	margin: 3px 0 22px 10px;
	font-size: 30px;
	font-weight: bold;
}

#privacy .paper>.title:not(:first-child) {
	margin-top: 24px;
}

#privacy .paper>.text {
	word-break: break-word;
	font-size: 18px;
	margin: 0 10px;
	line-height: 27px;
}

#privacy .paper>br {
	display: block;
	height: 27px;
	content: '';
}

/******************************** Post Page Layout ******************************/
#post ul,
#post ol {
	margin-top: 0;
	padding-left: 0;
}

#post ul li,
#post ol li {
	list-style-position: inside;
	margin-bottom: 4px;
}

#post ul ::marker,
#post ol ::marker {
	font-weight: bold;
}

#post .article {
	font-size: 17px;
	line-height: 1.3;
}

#post .post-img {
	position: relative;
	display: inline-flex;
}

#post .post-img img {
	width: 450px;
	border-radius: 2em;
}

#post .post-img>p {
	position: absolute;
	bottom: 0;
	right: 0;
	margin: 9px 25px;
	font-size: 11px;
	-webkit-user-select: none;
	user-select: none;
}

#post .post-img>p,
#post .post-img>p a {
	//color hardcoded cause needed only for mix-blend-mode
	color: #fff;
	mix-blend-mode: difference;
}

@media only screen and (min-width: 1024px) {
	#post .post-img {
		float: left;
		margin-right: 20px;
		margin-bottom: 6px;
	}
}

@media only screen and (max-width: 1023px) {
	#post .article {
		display: flex;
		flex-direction: column;
	}

	#post .post-img {
		display: flex;
		align-self: center;
		margin-bottom: 21px;
	}

	#post .post-img img {
		max-width: 90vw;
		height: auto;
	}
}

/***************************** Not Found Page Layout ****************************/
#notfound.content {
	position: absolute;
	top: 0;
	width: 100%;
	min-height: 100%;
	margin: 0;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	text-align: center;
	-webkit-user-select: none;
	user-select: none;
	padding-top: calc(var(--navbar-noshrink) + 20px);
	padding-bottom: 20px;
}

#notfound.content>i {
	font-size: 80px;
	margin-bottom: 20px;
}

#notfound.content>span {
	font-weight: bold;
	padding: 0 15px;
	font-size: 20px;
}

@media only screen and (max-width: 1023px) {
	#notfound.content {
		padding-bottom: calc(var(--nav-buttons-h) + 20px);
	}
}

@media only screen and (max-width: 600px) {
	#notfound.content>i {
		font-size: 70px;
	}

	#notfound.content>span {
		font-size: 17px;
	}
}

/***************************** Blog Page Layout ****************************/

#blog {
	border: 1px solid var(--img-border);
    border-radius: 2em;
    overflow: hidden;
}

#blog .heading {
	padding: 60px 20px;
	background: linear-gradient(180deg, var(--blog-header-from), var(--blog-header-to));
}

#blog .heading h2 {
	margin-top: 0;
}
/* ... */

